1e version TP 4.1 Spring JDBC

--- a/resources/app.properties
+++ b/resources/app.properties
@@ -1,2 +1,7 @@
 monFichierContenantDesPlats = restaurant.txt
-spring.profiles.active=fichier,service1
+spring.profiles.active=jdbc,service1
+# TODO mettre à jour les informations d'accès à votre base de données
+bdd.driver=com.mysql.cj.jdbc.Driver
+bdd.url=jdbc:mysql://localhost:3308/restaurant-bdd?useSSL=false&serverTimezone=UTC
+bdd.user=root
+bdd.pass=
