--- a/resources/app.properties
+++ b/resources/app.properties
@@ -1,5 +1,5 @@
 monFichierContenantDesPlats = restaurant.txt
-spring.profiles.active=jdbc,service1
+spring.profiles.active=jpa,service1
 # TODO mettre à jour les informations d'accès à votre base de données
 bdd.driver=com.mysql.cj.jdbc.Driver
 bdd.url=jdbc:mysql://localhost:3308/restaurant-bdd?useSSL=false&serverTimezone=UTC
