--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
 			<scope>runtime</scope>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
